Fixed overflow scroll bars on desktop

--- a/content/css/themes/crm/base.less
+++ b/content/css/themes/crm/base.less
@@ -599,7 +599,7 @@ body > .viewContainer > .dialog {
   visibility: hidden;
   position: absolute;
   background-color: #fff;
-  overflow: scroll;
+  overflow: auto;
   padding: 0 15px;
   top: 0;
   box-shadow: 0 0 5px @color-light-slate;
